--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -49,7 +49,7 @@
             </ul>
         </nav>
         <p>
-            <span id="currentDate">Wednesday, 11 May 2022</span>
+            <span id="currentDate"></span>
         </p>
     </header>
 
