--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -43,9 +43,9 @@
             <p>The proposed color-scheme for the different elements on this website is a cool color palette with
                 dark grounding neutrals. These colors have a classic feeling while still maintaing a modern vibe. <br>
                 <li>Website Background: #FFFFFF - White</li>
-                <li>Body Background: #CBE2E2 - Light Cyan</li>
+                <li>Body Background: #E5F0F0 - Azure</li>
                 <li>Header/Footer Background: #355F5F - Dark Slate Gray</li>
-                <li>Navigation Bar:#99E1D9 - Middle Blue Green</li>
+                <li>Navigation Bar:#B1D3D3 - Powder Blue</li>
                 <li>Text in Navigation Bar: #32292F - Black Coffee</li>
                 <li>H2 Titles: #355F5F - Dark Slate Gray</li>
                 <li>Text in Header & Footer: #FFFFFF - White</li>
@@ -55,10 +55,10 @@
         <section>
             <h2>Color palette</h2>
             <picture>
-                <img src="images/mount_saratoga_website_color_palette2.jpg" alt="Color Palett Image">
+                <img src="images/mount_saratoga_website_color_palette_1-1.jpg" alt="Color Palett Image">
             </picture>
             <h2>Color Names</h2>
-            <p>(From left to right) Dark Slate Gray , Opal, Light Cyan,
+            <p>(From left to right) Dark Slate Gray , Powder Blue, Azure,
                 Liver, Black Coffee, and White.</p>
         </section>
     </main>
