--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Home Page, Chamber of Commerce Website Planning Document, Week 3 Assignment">
-    <title>Merry Haymond - Home Page - Chamber of Commerce Website Planning Document</title>
+    <meta name="description"
+        content="Home Page, Mount Saratoga Chamber of Commerce Website Planning Document, Week 3 Assignment">
+    <title>Merry Haymond - Home Page - Mount Saratoga Chamber of Commerce Website Planning Document</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
