--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Color-Scheme Page, Chamber of Commerce Website Planning Document, Week 3 Assignment">
-    <title>Merry Haymond - Color-Scheme Page - Chamber of Commerce Website Planning Document</title>
+        content="Color-Scheme Page, Mount Saratoga Chamber of Commerce Website Planning Document, Week 3 Assignment">
+    <title>Merry Haymond - Color-Scheme Page - Mount Saratoga Chamber of Commerce Website Planning Document</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
