--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Target Audience, Chamber of Commerce Website Planning Document, Week 3 Assignment">
-    <title>Merry Haymond - Target Audience - Chamber of Commerce Website Planning Document</title>
+        content="Target Audience, Mount Saratoga Chamber of Commerce Website Planning Document, Week 3 Assignment">
+    <title>Merry Haymond - Target Audience - Mount Saratoga Chamber of Commerce Website Planning Document</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
