--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -85,7 +85,8 @@
         <section class="foot1">
             <div>
                 <picture id="logo2">
-                    <img src="images/mount_saratoga_logo_brown3.png" alt="Mount Saratoga Logo" width="125" height="125">
+                    <img src="images/mount_saratoga_white_logo_4-1.png" alt="Mount Saratoga Logo" width="125"
+                        height="125">
                 </picture>
             </div>
             <div class="address">
