--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -25,8 +25,7 @@
 <body>
     <header>
         <picture>
-            <a href="index.html" id="logo1" class="active">
-                <img src="images/mount_saratoga_white_logo_4-1.png" alt="Mount Saratoga Logo"></a>
+            <img src="images/mount_saratoga_white_logo_4-1.png" alt="Mount Saratoga Logo">
         </picture>
 
         <h1>Mount Saratoga <span id="cc"><br>Chamber of Commerce</span></h1>
@@ -38,7 +37,7 @@
                     width="35"></a>
         </div>
         <nav>
-            <button id="hamburgerBtn"><span>&#9776</span>
+            <button id="hamburgerBtn"><span>&#9776;</span>
                 <span>X</span></button>
             <ul id="primaryNav">
                 <li><a href="index.html">Home</a></li>
@@ -101,10 +100,7 @@
                     www.mountsaratogacc.com<br>
                     801-566-4346
                 </p>
-                <a href="https://www.google.com/maps/place/N+Mount+Saratoga+
-                Blvd,+Saratoga+Springs,+UT/@40.3708664,-111.9556582,17z/data=
-                !3m1!4b1!4m5!3m4!1s0x874d7c2ac07631df:0x2a09fbc324a34b9a!8m2!
-                3d40.3708664!4d-111.9556582">
+                <a href="https://www.google.com/maps/">
                     <i class="material-icons">&#xe567;</i>Location Map</a>
             </div>
         </section>
