--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -25,22 +25,22 @@
 <body>
     <header>
         <picture>
-            <img src="images/mount_saratoga_white_logo_4-1.png" alt="Mount Saratoga Logo">
+            <img src="images/mount_saratoga__6-1.png" alt="Mount Saratoga Logo">
         </picture>
 
         <h1>Mount Saratoga <span id="cc"><br>Chamber of Commerce</span></h1>
 
         <div class="social">
-            <a href="https://facebook.com" target="blank"><img src="images/Facebook_Logo_(2019).png" alt="Facebook Logo"
-                    width="32"></a>
-            <a href="https://linkedin.com" target="blank"><img src="images/rsz_pngwingcom.png" alt="Linkedin Logo"
+            <a href="https://facebook.com" target="blank"><img src="images/facebookLogo.png" alt="Facebook Logo"
+                    width="35"></a>
+            <a href="https://linkedin.com" target="blank"><img src="images/linkedinLogo.png" alt="Linkedin Logo"
                     width="35"></a>
         </div>
         <nav>
             <button id="hamburgerBtn"><span>&#9776;</span>
                 <span>X</span></button>
             <ul id="primaryNav">
-                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="discover.html">Discover</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
@@ -84,8 +84,7 @@
         <section class="foot1">
             <div>
                 <picture id="logo2">
-                    <img src="images/mount_saratoga_white_logo_4-1.png" alt="Mount Saratoga Logo" width="125"
-                        height="125">
+                    <img src="images/mount_saratoga__6-1.png" alt="Mount Saratoga Logo">
                 </picture>
             </div>
             <div class="address">
