--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -68,14 +68,13 @@
                 <h2>New Release</h2>
             </div>
             <div class="box5">
-                <h2 id="spot1">Spotlight 1</h2>
-                <h2 id="spot2">Spotlight 2</h2>
-                <h2 id="spot3">Spotlight 3</h2>
-            </div>
-            <div class="box6">
                 <h2>Join</h2>
             </div>
-
+            <div class="box6">
+                <div>Spotlight 1</div>
+                <div>Spotlight 2</div>
+                <div>Spotlight 3</div>
+            </div>
         </section>
     </main>
 
