--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -71,9 +71,15 @@
                 <h2>Join</h2>
             </div>
             <div class="box6">
-                <div>Spotlight 1</div>
-                <div>Spotlight 2</div>
-                <div>Spotlight 3</div>
+                <div>
+                    <h3>Spotlight 1</h3>
+                </div>
+                <div>
+                    <h3>Spotlight 2</h3>
+                </div>
+                <div>
+                    <h3>Spotlight 3</h3>
+                </div>
             </div>
         </section>
     </main>
