--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -93,11 +93,11 @@
                 </picture>
             </div>
             <div class="address">
-                <h3>Mount Saratoga Chamber of Commerce</h3>
-                <p>
-                    N Mount Saratoga Blvd<br>
-                    Mount Saratoga, Utah 38459
-                </p>
+                <h4>Mount Saratoga Chamber of Commerce</h>
+                    <p>
+                        N Mount Saratoga Blvd<br>
+                        Mount Saratoga, Utah 38459
+                    </p>
             </div>
             <div class="urlsite">
                 <p>
