--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     Design Principles</a></li>
             <li>Lesson 03: <a href="https://mjhaymond.github.io/wdd230/lesson3/index.html">
                     Website Planning Document</a></li>
-            <li>Lesson 04: <a href="https://mjhaymond.github.io/wdd230/lesson4/chamber/index.html">
+            <li>Lesson 04: <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">
                     Mount Saratoga Chamber of Commerce</a></li>
             <li>Lesson 05: <a href="">Title</a></li>
             <li>Lesson 06: <a href="">Title</a></li>
