--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <li>Lesson 03: <a href="https://mjhaymond.github.io/wdd230/lesson3/index.html">
                     Website Planning Document</a></li>
             <li>Lesson 04: <a href="https://mjhaymond.github.io/wdd230/chamber/index.html">
-                    Mount Saratoga Chamber of Commerce</a></li>
+                    Mount Saratoga Chamber of Commerce Homepage</a></li>
             <li>Lesson 05: <a href="">Title</a></li>
             <li>Lesson 06: <a href="">Title</a></li>
             <li>Lesson 07: <a href="">Title</a></li>
