--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,9 +55,14 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <section class="meetingbox">
-            <h2>Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</h2>
-        </section>
+        <div class="meetingimage">
+            <div class="meetingbox">
+                <img src="images/2product-school--gajroen6m4-unsplash.jpg" alt="Photo of a town meeting">
+            </div>
+            <div class="meetinginfo">
+                <h2>Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</h2>
+            </div>
+        </div>
         <section class="containers">
             <div class="box1">
                 <h2>Hero with site name and call to action</h2>
