--- a/chamber/index.html
+++ b/chamber/index.html
@@ -52,20 +52,20 @@
             <span id="currentDate"></span>
         </p>
     </header>
+    <aside id="banner">
+        "Come join us for the chamber meet and greet Wednesday at 7:00 p.m."&nbsp;&nbsp;&nbsp;&nbsp;<button
+            id="close">CLOSE</button>
+    </aside>
 
     <!-- CONTENT HERE -->
     <main>
-        <div class="meetingimage">
-            <div class="meetingbox">
-                <img src="images/2product-school--gajroen6m4-unsplash.jpg" alt="Photo of a town meeting">
-            </div>
-            <div class="meetinginfo">
-                <h2>Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</h2>
-            </div>
-        </div>
         <section class="containers">
             <div class="box1">
-                <h2>Hero with site name and call to action</h2>
+                <img src="images/ivan-bertona-jytpy32vzmo-unsplash.jpg" alt="">
+                <h2 class="welcome">Welcome to Mount Saratoga</h2>
+                <section class="joinbtn">
+                    <a href="join.html">Join the Chamber</a>
+                </section>
             </div>
             <div class="box2">
                 <h2>Event</h2>
