--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,20 +61,22 @@
     <main>
         <section class="containers">
             <div class="box1">
-                <img src="images/ivan-bertona-jytpy32vzmo-unsplash.jpg" alt="">
+                <img src="images/Mount Saratoga Town.jpg" alt="Photo of the town of Mount Saratoga.">
                 <h2 class="welcome">Welcome to Mount Saratoga</h2>
                 <section class="joinbtn">
                     <a href="join.html">Join the Chamber</a>
                 </section>
             </div>
             <div class="box2">
-                <h2>Event</h2>
+                <img src="images/July 24th Fair.jpg" alt="">
+                <h2 class="event">Founders Day Fair<br> July 24th!</h2>
             </div>
             <div class="box3">
                 <h2>Weather</h2>
             </div>
             <div class="box4">
-                <h2>New Release</h2>
+                <img src="images/mountain_bike_trails2.jpg" alt="Photo of mountain bike trails.">
+                <h2 class="news">New Mountain Bike Park opening soon!</h2>
             </div>
             <div class="box5">
                 <h2>Join</h2>
