--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,8 +53,8 @@
         </p>
     </header>
     <aside id="banner">
-        "Come join us for the chamber meet and greet Wednesday at 7:00 p.m."&nbsp;&nbsp;&nbsp;&nbsp;<button
-            id="close">CLOSE</button>
+        "Come join us for the chamber meet and greet Wednesday at 7:00 p.m." -----------&nbsp;<button
+            id="close">X</button>
     </aside>
 
     <!-- CONTENT HERE -->
@@ -69,21 +69,34 @@
             </div>
             <div class="box2">
                 <img src="images/July 24th Fair.jpg" alt="">
-                <h2 class="event">Founders Day Fair<br> July 24th!</h2>
+                <h2 class="event">Founder's Day Fair</h2>
+                <p>Come enjoy the rides, food, and music July 18th, at the fairgrounds!</p>
             </div>
             <div class="box3">
-                <h2>Weather</h2>
+                <img src="images/clouds_sun_weather_icon.png" alt="Sun and Clouds icon">
+                <h2 class="weather">Today's Weather</h2>
+                <p>33 C<br>
+                    Partly Cloudy<br>
+                    Wind Speed: 2.5km/h<br>
+                    Wind Chill: N/A</P>
             </div>
             <div class="box4">
-                <img src="images/mountain_bike_trails2.jpg" alt="Photo of mountain bike trails.">
-                <h2 class="news">New Mountain Bike Park opening soon!</h2>
+                <img src="images/Mountain Bike Trails4.jpg" alt="Photo of mountain bike trails.">
+                <h2 class="news">New Bike Park</h2>
+                <p>Five new mountain bike trails will open to the public in July. <a href="#">more info...</a>
+                </p>
             </div>
             <div class="box5">
-                <h2>Join</h2>
+                <img src="images/Chamber Pic.jpg" alt="State Capital Picture">
+                <h2 class="join">Join Our Chamber</h2>
+                <p>Discover how to join the chamber of commerce and how it will benefit your business!</p>
+                <section class="joinbtn2">
+                    <a href="joinnow.html">Join Us</a>
+                </section>
             </div>
             <div class="box6">
                 <div>
-                    <h3>Spotlight 1</h3>
+                    <h3 class="sp1">Spotlight 1</h3>
                 </div>
                 <div>
                     <h3>Spotlight 2</h3>
