--- a/chamber/index.html
+++ b/chamber/index.html
@@ -95,14 +95,42 @@
                 </section>
             </div>
             <div class="box6">
-                <div>
-                    <h3 class="sp1">Spotlight 1</h3>
+                <div class="split1">
+                    <h2 class="boat">Dining Cruse</h2>
+                    <img src="images/Boat Tours2.jpg" alt="">
+                    <p><b>The Lake View Boat Tours Company</b> has just added two new cruse boats to their fleet. These
+                        new boats offer luxury dining with a full kitchen staff for each boat.
+                    </p>
+                    <p> For more info...<br>
+                        <b>www.lakeviewboattours.com<br>
+                            801-543-9876 </b>
+                    </p>
                 </div>
-                <div>
-                    <h3>Spotlight 2</h3>
+                <div class="split2">
+                    <h2 class="bed">Bed & Breakfast</h2>
+                    <img src="images/Bed and Breakfast.jpg" alt="">
+                    <p><b>The Hallstat Bed & Breakfast</b> renovations took longer than expected, but Janet and Robby
+                        Stanton
+                        felt it was worth the time it took to restore this historic building. Join them for a picnic
+                        BBQ as they celebrate the grand reopening of this beautiful Austrian style home.
+                    </p>
+                    <p> For more info...<br>
+                        <b>www.hallstatbedandbreakfast.com<br>
+                            801-543-6473 </b>
+                    </p>
                 </div>
-                <div>
-                    <h3>Spotlight 3</h3>
+                <div class="split3">
+                    <h2 class="cafe">Austrian Cafe</h2>
+                    <img src="images/Austrian Resturant.jpg" alt="">
+                    <p><b>The Vlaamsche Austrian Cafe</b> is now open for business. This delightful
+                        Austrian style cafe has a beautiful outdoor seating area complete with twinkling lights
+                        and hanging ivy.
+
+                    </p>
+                    <p> For more info...<br>
+                        <b>www.saratogaboattours.com<br>
+                            801-543-9876 </b>
+                    </p>
                 </div>
             </div>
         </section>
