--- a/chamber/index.html
+++ b/chamber/index.html
@@ -98,8 +98,8 @@
                 <div class="split1">
                     <h2 class="boat">Dining Cruse</h2>
                     <img src="images/Boat Tours2.jpg" alt="">
-                    <p><b>The Lake View Boat Tours Company</b> has just added two new cruse boats to their fleet. These
-                        new boats offer luxury dining with a full kitchen staff for each boat.
+                    <p><b>The Lake View Boat Tours Company</b> has just added two new cruse boats that
+                        offer luxury dining with a full kitchen staff for each boat.
                     </p>
                     <p> For more info...<br>
                         <b>www.lakeviewboattours.com<br>
@@ -109,10 +109,8 @@
                 <div class="split2">
                     <h2 class="bed">Bed & Breakfast</h2>
                     <img src="images/Bed and Breakfast.jpg" alt="">
-                    <p><b>The Hallstat Bed & Breakfast</b> renovations took longer than expected, but Janet and Robby
-                        Stanton
-                        felt it was worth the time it took to restore this historic building. Join them for a picnic
-                        BBQ as they celebrate the grand reopening of this beautiful Austrian style home.
+                    <p><b>The Hallstat Bed & Breakfast</b> renovation is complete! This beautiful, historic,
+                        Austrian style home is more charming than ever. Book your stay now!
                     </p>
                     <p> For more info...<br>
                         <b>www.hallstatbedandbreakfast.com<br>
@@ -123,8 +121,8 @@
                     <h2 class="cafe">Austrian Cafe</h2>
                     <img src="images/Austrian Resturant.jpg" alt="">
                     <p><b>The Vlaamsche Austrian Cafe</b> is now open for business. This delightful
-                        Austrian style cafe has a beautiful outdoor seating area complete with twinkling lights
-                        and hanging ivy.
+                        Austrian style cafe has a beautiful outdoor seating area complete perfect for
+                        any occasion.
 
                     </p>
                     <p> For more info...<br>
