--- a/chamber/index.html
+++ b/chamber/index.html
@@ -121,7 +121,7 @@
                     <h2 class="cafe">Austrian Cafe</h2>
                     <img src="images/Austrian Resturant.jpg" alt="">
                     <p><b>The Vlaamsche Austrian Cafe</b> is now open for business. This delightful
-                        Austrian style cafe has a beautiful outdoor seating area complete perfect for
+                        Austrian style cafe has a beautiful outdoor seating area perfect for
                         any occasion.
 
                     </p>
