--- a/chamber/index.html
+++ b/chamber/index.html
@@ -61,14 +61,14 @@
     <main>
         <section class="containers">
             <div class="box1">
-                <img src="images/Mount Saratoga Town.jpg" alt="Photo of the town of Mount Saratoga.">
+                <img src="images/MountSaratogaTown.jpg" alt="Photo of the town of Mount Saratoga.">
                 <h2 class="welcome">Welcome to Mount Saratoga</h2>
                 <section class="joinbtn">
                     <a href="join.html">Join the Chamber</a>
                 </section>
             </div>
             <div class="box2">
-                <img src="images/July 24th Fair.jpg" alt="">
+                <img src="images/July24thFair.jpg" alt="">
                 <h2 class="event">Founder's Day Fair</h2>
                 <p>Come enjoy the rides, food, and music July 18th, at the fairgrounds!</p>
             </div>
@@ -81,13 +81,13 @@
                     Wind Chill: N/A</P>
             </div>
             <div class="box4">
-                <img src="images/Mountain Bike Trails4.jpg" alt="Photo of mountain bike trails.">
+                <img src="images/MountainBikeTrails4.jpg" alt="Photo of mountain bike trails.">
                 <h2 class="news">New Bike Park</h2>
                 <p>Five new mountain bike trails will open to the public in July. <a href="#">more info...</a>
                 </p>
             </div>
             <div class="box5">
-                <img src="images/Chamber Pic.jpg" alt="State Capital Picture">
+                <img src="images/ChamberPic.jpg" alt="State Capital Picture">
                 <h2 class="join">Join Our Chamber</h2>
                 <p>Discover how to join the chamber of commerce and how it will benefit your business!</p>
                 <section class="joinbtn2">
@@ -97,7 +97,7 @@
             <div class="box6">
                 <div class="split1">
                     <h2 class="boat">Dining Cruse</h2>
-                    <img src="images/Boat Tours2.jpg" alt="">
+                    <img src="images/BoatTours2.jpg" alt="">
                     <p><b>The Lake View Boat Tours Company</b> has just added two new cruse boats that
                         offer luxury dining with a full kitchen staff for each boat.
                     </p>
@@ -108,7 +108,7 @@
                 </div>
                 <div class="split2">
                     <h2 class="bed">Bed & Breakfast</h2>
-                    <img src="images/Bed and Breakfast.jpg" alt="">
+                    <img src="images/BedandBreakfast.jpg" alt="">
                     <p><b>The Hallstat Bed & Breakfast</b> renovation is complete! This beautiful, historic,
                         Austrian style home is more charming than ever. Book your stay now!
                     </p>
@@ -119,7 +119,7 @@
                 </div>
                 <div class="split3">
                     <h2 class="cafe">Austrian Cafe</h2>
-                    <img src="images/Austrian Resturant.jpg" alt="">
+                    <img src="images/AustrianResturant.jpg" alt="">
                     <p><b>The Vlaamsche Austrian Cafe</b> is now open for business. This delightful
                         Austrian style cafe has a beautiful outdoor seating area perfect for
                         any occasion.
