--- a/chamber/index.html
+++ b/chamber/index.html
@@ -63,9 +63,9 @@
             <div class="box1">
                 <img src="images/MountSaratogaTown.jpg" alt="Photo of the town of Mount Saratoga.">
                 <h2 class="welcome">Welcome to Mount Saratoga</h2>
-                <section class="joinbtn">
+                <div class="joinbtn">
                     <a href="join.html">Join the Chamber</a>
-                </section>
+                </div>
             </div>
             <div class="box2">
                 <img src="images/July24thFair.jpg" alt="">
@@ -90,9 +90,9 @@
                 <img src="images/ChamberPic.jpg" alt="State Capital Picture">
                 <h2 class="join">Join Our Chamber</h2>
                 <p>Discover how to join the chamber of commerce and how it will benefit your business!</p>
-                <section class="joinbtn2">
+                <div class="joinbtn2">
                     <a href="joinnow.html">Join Us</a>
-                </section>
+                </div>
             </div>
             <div class="box6">
                 <div class="split1">
