--- a/chamber/index.html
+++ b/chamber/index.html
@@ -143,11 +143,11 @@
                 </picture>
             </div>
             <div class="address">
-                <h4>Mount Saratoga Chamber of Commerce</h>
-                    <p>
-                        N Mount Saratoga Blvd<br>
-                        Mount Saratoga, Utah 38459
-                    </p>
+                <h3><b>Mount Saratoga Chamber of Commerce</b></h3>
+                <p>
+                    N Mount Saratoga Blvd<br>
+                    Mount Saratoga, Utah 38459
+                </p>
             </div>
             <div class="urlsite">
                 <p>
