--- a/chamber/index.html
+++ b/chamber/index.html
@@ -53,15 +53,18 @@
         </p>
     </header>
     <aside id="banner">
-        "Come join us for the chamber meet and greet Wednesday at 7:00 p.m." -----------&nbsp;<button
-            id="close">X</button>
+        "Come join us for the chamber meet and greet Wednesday at 7:00 p.m." &nbsp;<button id="close">X</button>
     </aside>
 
     <!-- CONTENT HERE -->
     <main>
         <section class="containers">
             <div class="box1">
-                <img src="images/MountSaratogaTown.jpg" alt="Photo of the town of Mount Saratoga.">
+                <figure class="temp-img">
+                    <img src="images/wdd230-large.webp" alt="Temporary Hero Image" srcset="images/wdd230-small.webp 400w, images/wdd230-medium.webp 600w, 
+                        images/wdd230-large.webp 960w,">
+                </figure>
+                <!--<img src="images/MountSaratogaTown.jpg" alt="Photo of Mount Saratoga.">-->
                 <h2 class="welcome">Welcome to Mount Saratoga</h2>
                 <div class="joinbtn">
                     <a href="join.html">Join the Chamber</a>
@@ -69,12 +72,12 @@
             </div>
             <div class="box2">
                 <img src="images/July24thFair.jpg" alt="">
-                <h2 class="event">Founder's Day Fair</h2>
-                <p>Come enjoy the rides, food, and music July 18th, at the fairgrounds!</p>
+                <h2 class="event">Event</h2>
+                <p>Founder's Day Fair! Come enjoy the rides, food, and music July 18th, at the fairgrounds!</p>
             </div>
             <div class="box3">
                 <img src="images/clouds_sun_weather_icon.png" alt="Sun and Clouds icon">
-                <h2 class="weather">Today's Weather</h2>
+                <h2 class="weather">Weather</h2>
                 <p>33 C<br>
                     Partly Cloudy<br>
                     Wind Speed: 2.5km/h<br>
@@ -82,21 +85,22 @@
             </div>
             <div class="box4">
                 <img src="images/MountainBikeTrails4.jpg" alt="Photo of mountain bike trails.">
-                <h2 class="news">New Bike Park</h2>
-                <p>Five new mountain bike trails will open to the public in July. <a href="#">more info...</a>
+                <h2 class="news">News</h2>
+                <p>Five new bike trials have been added to the mountain bike park and will be open to the
+                    public starting in July. <a href="#">more info...</a>
                 </p>
             </div>
             <div class="box5">
                 <img src="images/ChamberPic.jpg" alt="State Capital Picture">
-                <h2 class="join">Join Our Chamber</h2>
+                <h2 class="join">Join Us</h2>
                 <p>Discover how to join the chamber of commerce and how it will benefit your business!</p>
                 <div class="joinbtn2">
-                    <a href="joinnow.html">Join Us</a>
+                    <a href="joinnow.html">Learn More</a>
                 </div>
             </div>
             <div class="box6">
                 <div class="split1">
-                    <h2 class="boat">Dining Cruse</h2>
+                    <h2 class="boat">Dinner Cruse</h2>
                     <img src="images/BoatTours2.jpg" alt="">
                     <p><b>The Lake View Boat Tours Company</b> has just added two new cruse boats that
                         offer luxury dining with a full kitchen staff for each boat.
@@ -121,7 +125,7 @@
                     <h2 class="cafe">Austrian Cafe</h2>
                     <img src="images/AustrianResturant.jpg" alt="">
                     <p><b>The Vlaamsche Austrian Cafe</b> is now open for business. This delightful
-                        Austrian style cafe has a beautiful outdoor seating area perfect for
+                        Austrian style cafe has a beautiful outdoor seating area perfect to celebrate
                         any occasion.
 
                     </p>
