--- a/chamber/index.html
+++ b/chamber/index.html
@@ -71,12 +71,17 @@
                 </div>
             </div>
             <div class="box2">
-                <img src="images/July24thFair.jpg" alt="">
+                <figure>
+                    <img src="images/July24thFair-large.jpg" alt="Ferris Wheel"
+                        srcset="images/July24thFair-large1.jpg 960w">
+                </figure>
+                <!--<img src="images/July24thFair.jpg" alt="Ferris Wheel">-->
                 <h2 class="event">Event</h2>
                 <p>Founder's Day Fair! Come enjoy the rides, food, and music July 18th, at the fairgrounds!</p>
             </div>
             <div class="box3">
-                <img src="images/clouds_sun_weather_icon.png" alt="Sun and Clouds icon">
+                <img src="images/weather250.jpg" alt="">
+                <!--<img src="images/clouds_sun_weather_icon.png" alt="Sun and Clouds icon">-->
                 <h2 class="weather">Weather</h2>
                 <p>33 C<br>
                     Partly Cloudy<br>
@@ -111,13 +116,13 @@
                     </p>
                 </div>
                 <div class="split2">
-                    <h2 class="bed">Bed & Breakfast</h2>
+                    <h2 class="bed">Hotel</h2>
                     <img src="images/BedandBreakfast.jpg" alt="">
-                    <p><b>The Hallstat Bed & Breakfast</b> renovation is complete! This beautiful, historic,
+                    <p><b>The Hallstat Hotel</b> renovation is complete! This beautiful, historic,
                         Austrian style home is more charming than ever. Book your stay now!
                     </p>
                     <p> For more info...<br>
-                        <b>www.hallstatbedandbreakfast.com<br>
+                        <b>www.hallstathotel.com<br>
                             801-543-6473 </b>
                     </p>
                 </div>
