--- a/chamber/index.html
+++ b/chamber/index.html
@@ -72,15 +72,14 @@
             </div>
             <div class="box2">
                 <figure>
-                    <img src="images/July24thFair-large.jpg" alt="Ferris Wheel"
-                        srcset="images/July24thFair-large1.jpg 960w">
+                    <img src="images/Fair300.jpg" alt="Ferris Wheel">
                 </figure>
                 <!--<img src="images/July24thFair.jpg" alt="Ferris Wheel">-->
                 <h2 class="event">Event</h2>
                 <p>Founder's Day Fair! Come enjoy the rides, food, and music July 18th, at the fairgrounds!</p>
             </div>
             <div class="box3">
-                <img src="images/weather250.jpg" alt="">
+                <img src="images/weather300.jpg" alt="">
                 <!--<img src="images/clouds_sun_weather_icon.png" alt="Sun and Clouds icon">-->
                 <h2 class="weather">Weather</h2>
                 <p>33 C<br>
@@ -105,23 +104,23 @@
             </div>
             <div class="box6">
                 <div class="split1">
-                    <h2 class="boat">Dinner Cruse</h2>
+                    <h2 class="boat">Dinner Cruise</h2>
                     <img src="images/BoatTours2.jpg" alt="">
-                    <p><b>The Lake View Boat Tours Company</b> has just added two new cruse boats that
+                    <p><b>The Lake View Boat Tours Company</b> has just added two new cruise boats that
                         offer luxury dining with a full kitchen staff for each boat.
                     </p>
-                    <p> For more info...<br>
+                    <p>
                         <b>www.lakeviewboattours.com<br>
                             801-543-9876 </b>
                     </p>
                 </div>
                 <div class="split2">
-                    <h2 class="bed">Hotel</h2>
+                    <h2 class="bed">Bed & Breakfast</h2>
                     <img src="images/BedandBreakfast.jpg" alt="">
-                    <p><b>The Hallstat Hotel</b> renovation is complete! This beautiful, historic,
+                    <p><b>The Hallstat Bed and Breakfast</b> renovation is complete! This beautiful, historic,
                         Austrian style home is more charming than ever. Book your stay now!
                     </p>
-                    <p> For more info...<br>
+                    <p>
                         <b>www.hallstathotel.com<br>
                             801-543-6473 </b>
                     </p>
@@ -134,7 +133,7 @@
                         any occasion.
 
                     </p>
-                    <p> For more info...<br>
+                    <p>
                         <b>www.saratogaboattours.com<br>
                             801-543-9876 </b>
                     </p>
