--- a/chamber/index.html
+++ b/chamber/index.html
@@ -60,10 +60,10 @@
     <main>
         <section class="containers">
             <div class="box1">
-                <figure class="temp-img">
+                <picture>
                     <img src="images/wdd230-large.webp" alt="Temporary Hero Image" srcset="images/wdd230-small.webp 400w, images/wdd230-medium.webp 600w, 
                         images/wdd230-large.webp 960w,">
-                </figure>
+                </picture>
                 <!--<img src="images/MountSaratogaTown.jpg" alt="Photo of Mount Saratoga.">-->
                 <h2 class="welcome">Welcome to Mount Saratoga</h2>
                 <div class="joinbtn">
@@ -71,9 +71,9 @@
                 </div>
             </div>
             <div class="box2">
-                <figure>
+                <picture>
                     <img src="images/Fair300.jpg" alt="Ferris Wheel">
-                </figure>
+                </picture>
                 <!--<img src="images/July24thFair.jpg" alt="Ferris Wheel">-->
                 <h2 class="event">Event</h2>
                 <p>Founder's Day Fair! Come enjoy the rides, food, and music July 18th, at the fairgrounds!</p>
